fix: content of some assignments

--- a/src/pages/css-flexbox.mdx
+++ b/src/pages/css-flexbox.mdx
@@ -7,7 +7,7 @@ export const description =
 
 # CSS FlexBox
 
-**Objective:**
+## **Objective:**
 
 - Clone the **Instagram profile page** for Google from the following link:
   [Google Instagram Page](https://www.instagram.com/google)
@@ -15,7 +15,7 @@ export const description =
 
 ---
 
-### **Steps to Complete the Assignment**
+## **Steps to Complete the Assignment**
 
 ### 1. **Install SVG Grabber**
 
