--- a/src/pages/css-positions.mdx
+++ b/src/pages/css-positions.mdx
@@ -1,12 +1,12 @@
 # CSS Positions
 
-### Objective:
+## Objective:
 
 Reinforce the concepts of `static`, `relative`, `absolute`, `fixed`, and `sticky` positioning through practical exercises.
 
 ---
 
-### Instructions:
+## Instructions:
 
 1. Create a new HTML file named `positions.html`.
 2. Link a CSS file named `styles.css` to the HTML file.
@@ -14,7 +14,7 @@ Reinforce the concepts of `static`, `relative`, `absolute`, `fixed`, and `sticky
 
 ---
 
-### Tasks:
+## Tasks:
 
 ### **Part 1: Static Positioning (Default)**
 
