--- a/src/pages/html-forms-&-tables.mdx
+++ b/src/pages/html-forms-&-tables.mdx
@@ -1,8 +1,17 @@
-# HTML Assignment: Structuring Content
+import { HeroPattern } from '@/components/HeroPattern'
 
-### Objective:
+export const description =
+  'Learn to create and structure HTML content using tables, lists, and forms with validation.'
+
+<HeroPattern />
+
+# HTML Forms & Tables
+
+## Objective:
 
 Practice creating and structuring HTML content using **tables**, **lists**, and **forms**. You will also learn to implement validation on form fields to enhance user input handling and ensure data accuracy. This assignment will help you gain a deeper understanding of HTML elements and attributes, including form validation techniques.
+
+---
 
 **1. Table Creation**
 
@@ -37,7 +46,7 @@ Practice creating and structuring HTML content using **tables**, **lists**, and 
 
 - Design a simple **HTML form** with the following fields:
   - **Name Input:**
-    - Text input for the user’s name.
+    - Text input for the user's name.
     - Validation:
       - `minlength="3"`
       - `maxlength="50"`.
@@ -62,11 +71,3 @@ Practice creating and structuring HTML content using **tables**, **lists**, and 
   - **Email Field:** Use the `required` attribute to ensure the field cannot be left empty.
   - **Gender Selection:** Validate that at least one gender option is selected.
   - Use attributes such as `required`, `minlength`, and `maxlength` effectively.
-
----
-
-### Note:
-
-- Test all links, tables, lists, and forms to ensure they work as expected.
-
----
