--- a/src/pages/introduction-to-css.mdx
+++ b/src/pages/introduction-to-css.mdx
@@ -1,12 +1,23 @@
+import { HeroPattern } from '@/components/HeroPattern'
+
+export const description =
+  'Learn to create and style cards using CSS by cloning a professional design from Dribbble.'
+
+<HeroPattern />
+
 # Introduction to CSS
 
 ## **Objective:**
 
 - Clone the **cards** from the provided link as closely as possible. Pay attention to the design details, layout, and styling to achieve a high level of similarity.
 
-**Link to the cards for reference:** [Dribbble Card Design: Signup and Onboarding](https://dribbble.com/shots/15573169-Signup-and-onboarding)
+**Link to the cards for reference:**
 
-## **File Structure:**
+[Dribbble Card Design: Signup and Onboarding](https://dribbble.com/shots/15573169-Signup-and-onboarding)
+
+---
+
+### **File Structure:**
 
 1. **Main File (`index.html`):**
    - Create a main file named `index.html`.
@@ -23,7 +34,9 @@
    - Each file should contain **one card**, centered in the viewport.
    - The card design must match the corresponding design from the Dribbble link.
 
-## **Design Guidelines:**
+---
+
+### **Design Guidelines:**
 
 1. **CSS Styling:**
    - Use CSS for layout and styling to replicate the design as closely as possible.
@@ -38,12 +51,12 @@
      - Use CSS properties like `display: flex`, `justify-content: center`, and `align-items: center` to achieve this.
 3. **File Linking:**
    - Ensure the **links in the `index.html` file** navigate correctly to the respective card pages (`card1.html`, `card2.html`, `card3.html`).
+4. **File Organization:**
+   - All files (`index.html`, `card1.html`, `card2.html`, `card3.html`, and CSS file) should be placed in the same project folder for easy access and testing.
 
-## - **File Organization:**
+---
 
-- All files (`index.html`, `card1.html`, `card2.html`, `card3.html`, and CSS file) should be placed in the same project folder for easy access and testing.
-
-## **Tips for Success:**
+### **Tips for Success:**
 
 - Use the browser's developer tools to inspect and understand the design elements in the Dribbble link.
 - Pay attention to spacing, alignment, and typography.
