--- a/src/pages/introduction-to-git-&-github.mdx
+++ b/src/pages/introduction-to-git-&-github.mdx
@@ -1,82 +1,30 @@
 import { HeroPattern } from '@/components/HeroPattern'
 
 export const description =
-  'Learn and practice essential Git and GitHub concepts through hands-on exercises.'
+  'Learn and practice essential Git and GitHub concepts and workflows.'
 
 <HeroPattern />
 
-# Introduction to Git & GitHub
+# Introduction to Git & Github
 
-Learn how to use Git for version control and collaborate using GitHub's platform.
-
-## Objective
+## Objective:
 
 Reinforce your understanding of Git and GitHub by practicing essential concepts and workflows.
 
-## Assignment Tasks
-
-### 1. Git Basics
-
-1. **Installation & Setup**
-
-   - Verify Git installation on your system
-   - Install from official website if needed
-   - Configure Git with your name and email
-
-2. **Repository Creation**
-
-   - Create a new folder for the assignment
-   - Initialize it as a Git repository
-   - Create a `README.md` file
-   - Write a brief introduction about yourself
-
-3. **Version Control**
-   - Stage your changes
-   - Create your first commit
-   - Verify the commit history
-
-### 2. Working with GitHub
-
-1. **Repository Setup**
-
-   - Create a new GitHub repository named `GitHub-Basics`
-   - Link your local repository to GitHub
-   - Push your local commits
-   - Verify file appearance on GitHub
-
-2. **Basic GitHub Operations**
-   - Create a new branch
-   - Make changes in the new branch
-   - Create a pull request
-   - Merge the changes
-
-### 3. Collaboration Features
-
-1. **Issues**
-
-   - Create a new issue
-   - Add labels and descriptions
-   - Practice closing issues
-
-2. **Documentation**
-   - Update README.md with:
-     - Project description
-     - Setup instructions
-     - Usage guidelines
-
-## Testing Requirements
-
-- Verify all Git commands work correctly
-- Ensure GitHub repository is properly configured
-- Check that all commits are properly pushed
-- Validate branch operations and merges
-
-## Resources
-
-- [Git Documentation](https://git-scm.com/doc)
-- [GitHub Guides](https://guides.github.com/)
-- [GitHub Learning Lab](https://lab.github.com/)
-
-Remember to follow Git best practices and commit messages conventions throughout the assignment.
-
 ---
+
+### Part 1: Git Basics
+
+1. Verify that Git is installed on your system. If not, install it from the official website.
+2. Set up your Git configuration by adding your name and email.
+3. Create a new folder for this assignment and initialize it as a Git repository.
+4. Inside the folder, create a file (e.g., `README.md`), write a brief introduction about yourself, and save it.
+5. Stage and commit the changes in your repository.
+6. Check the commit history to ensure the changes were saved.
+
+### Part 2: Working with GitHub
+
+1. Create a new repository on GitHub and name it `GitHub-Basics`.
+2. Link your local repository to the newly created GitHub repository.
+3. Push your local commits to the GitHub repository.
+4. Confirm that the file appears on GitHub.
